--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="large_margin">120dp</dimen>
     <dimen name="hairline">1dp</dimen>
     <dimen name="margin_5_dp">5dp</dimen>
+    <dimen name="main_container_text_size">25sp</dimen>
 </resources>
